seperate volume controls

--- a/src/app/musica/musica.component.html
+++ b/src/app/musica/musica.component.html
@@ -6,8 +6,17 @@
 <div class="container">
 
     <form>
-        <label for="volume">Volume</label>
-        <input #input type="range" id="volume" name="volume" min="0" max="100" (input)="setVolume(input.value)">
+        <!-- <label for="global">Global</label>
+        <input #global type="range" id="global" name="global" min="0" max="100" (input)="setGlobalVolume(global.value)"> -->
+
+        <label for="beat">Beat</label>
+        <input #beat type="range" id="beat" name="beat" min="0" max="100" (input)="setVolume(beat.value, 'beat')">
+
+        <label for="half">Half beat</label>
+        <input #half type="range" id="half" name="half" min="0" max="100" (input)="setVolume(half.value, 'half')">
+
+        <label for="off">Off beat</label>
+        <input #off type="range" id="off" name="off" min="0" max="100" (input)="setVolume(off.value, 'off')">
     </form>
 
 </div>
