Centralized all samples and volumes

--- a/src/app/musica/musica.component.html
+++ b/src/app/musica/musica.component.html
@@ -17,7 +17,7 @@
         <input #melody type="range" id="melody" name="melody" min="0" max="100" (input)="setVolume(melody.value, 'melody')">
 
         <label for="hihat">Hi-hat</label>
-        <input #hihat type="range" id="hihat" name="hihat" min="0" max="100" (input)="setVolume(hihat.value, 'hihat')">
+        <input #hihat type="range" id="hihat" name="hihat" min="0" max="100" (input)="setVolume(hihat.value, 'hiHat')">
     
     </form>
 
