--- a/src/app/musica/musica.component.html
+++ b/src/app/musica/musica.component.html
@@ -1,7 +1,7 @@
 <h2>musica!</h2>
 
-<button (click)="startMusica()">Play</button>
-<button (click)="stopMusica()">Stop</button>
+<button (click)="startMusic()">Play</button>
+<button (click)="stopMusic()">Stop</button>
 
 <div class="container">
 
