--- a/src/app/musica/musica.component.html
+++ b/src/app/musica/musica.component.html
@@ -4,21 +4,25 @@
 <button (click)="stopMusic()">Stop</button>
 
 <div class="container">
+  <form>
+    <label for="beat">Beat</label>
+    <input #beat type="range" id="beat" name="beat" min="0" max="100" (input)="setVolume(beat.value, 'beat')" />
 
-    <form>
- 
-        <label for="beat">Beat</label>
-        <input #beat type="range" id="beat" name="beat" min="0" max="100" (input)="setVolume(beat.value, 'beat')">
+    <label for="claps">Claps</label>
+    <input #claps type="range" id="claps" name="claps" min="0" max="100" (input)="setVolume(claps.value, 'claps')" />
 
-        <label for="claps">Claps</label>
-        <input #claps type="range" id="claps" name="claps" min="0" max="100" (input)="setVolume(claps.value, 'claps')">
+    <label for="melody">Melody</label>
+    <input
+      #melody
+      type="range"
+      id="melody"
+      name="melody"
+      min="0"
+      max="100"
+      (input)="setVolume(melody.value, 'melody')"
+    />
 
-        <label for="melody">Melody</label>
-        <input #melody type="range" id="melody" name="melody" min="0" max="100" (input)="setVolume(melody.value, 'melody')">
-
-        <label for="hihat">Hi-hat</label>
-        <input #hihat type="range" id="hihat" name="hihat" min="0" max="100" (input)="setVolume(hihat.value, 'hiHat')">
-    
-    </form>
-
+    <label for="hihat">Hi-hat</label>
+    <input #hihat type="range" id="hihat" name="hihat" min="0" max="100" (input)="setVolume(hihat.value, 'hiHat')" />
+  </form>
 </div>
